--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "gobject-impl"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "lib.rs"
+
 [dependencies]
 glib = "0.15"
 gobject-impl-macros = { path = "gobject-impl-macros" }
